...
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/agent_action_review_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
...
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/agent_space_large"
                    android:text="@string/agent_action_before_label"
                    android:visibility="gone" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/agent_action_review_appointment_before"
                    style="@style/TextAppearance.Material3.BodyMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/agent_space_tiny"
                    android:textIsSelectable="true"
                    android:visibility="gone" />
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/agent_space_large"
                    android:text="@string/agent_action_after_label" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/agent_action_review_appointment_after"
                    style="@style/TextAppearance.Material3.BodyMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/agent_space_tiny"
                    android:textIsSelectable="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/agent_action_review_delivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <com.google.android.material.textview.MaterialTextView
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/agent_space_large"
                    android:text="@string/agent_action_before_label" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/agent_action_review_delivery_before"
                    style="@style/TextAppearance.Material3.BodyMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/agent_space_tiny"
                    android:textIsSelectable="true" />

...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/agent_space_large"
                    android:text="@string/agent_action_after_label" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/agent_action_review_delivery_after"
                    style="@style/TextAppearance.Material3.BodyMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/agent_space_tiny"
                    android:textIsSelectable="true" />
            </LinearLayout>
...
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/agent_space_large" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/agent_action_review_total"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/agent_space_small" />

        <com.google.android.material.textview.MaterialTextView
...
